src/rockstar-parser.js
module.exports = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { Program: peg$parseProgram },
        peg$startRuleFunction  = peg$parseProgram,

        peg$c0 = ",",
        peg$c1 = peg$literalExpectation(",", false),
        peg$c2 = "\n",
        peg$c3 = peg$literalExpectation("\n", false),
        peg$c4 = function(s) {return s},
        peg$c5 = /^[ \t]/,
        peg$c6 = peg$classExpectation([" ", "\t"], false, false),
        peg$c7 = "lumos",
        peg$c8 = peg$literalExpectation("lumos", true),
        peg$c9 = /^[a-zA-Z0-9 ]/,
        peg$c10 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], " "], false, false),
        peg$c11 = /^[!\/@#$%\^&*()-_+=.<>,]/,
        peg$c12 = peg$classExpectation(["!", "/", "@", "#", "$", "%", "^", "&", "*", "(", [")", "_"], "+", "=", ".", "<", ">", ","], false, false),
        peg$c13 = function(n) {return {t: 'Variable', n}},
        peg$c14 = /^[a-zA-Z]/,
        peg$c15 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
        peg$c16 = "the",
        peg$c17 = peg$literalExpectation("the", true),
        peg$c18 = "my",
        peg$c19 = peg$literalExpectation("my", true),
        peg$c20 = "your",
        peg$c21 = peg$literalExpectation("your", true),
        peg$c22 = /^[a-z]/,
        peg$c23 = peg$classExpectation([["a", "z"]], false, false),
        peg$c24 = function(p, v) {return p+v},
        peg$c25 = /^[A-Z]/,
        peg$c26 = peg$classExpectation([["A", "Z"]], false, false),
        peg$c27 = /^[A-Za-z]/,
        peg$c28 = peg$classExpectation([["A", "Z"], ["a", "z"]], false, false),
        peg$c29 = function(v) { return {t: 'Literal', v} },
        peg$c30 = "nothing",
        peg$c31 = peg$literalExpectation("nothing", true),
        peg$c32 = "nox",
        peg$c33 = peg$literalExpectation("nox", true),
        peg$c34 = function() {return 0},
        peg$c35 = "true",
        peg$c36 = peg$literalExpectation("true", true),
        peg$c37 = "a wizard",
        peg$c38 = peg$literalExpectation("a wizard", true),
        peg$c39 = function() {return true},
        peg$c40 = "false",
        peg$c41 = peg$literalExpectation("false", true),
        peg$c42 = "a muggle",
        peg$c43 = peg$literalExpectation("a muggle", true),
        peg$c44 = function() {return false},
        peg$c45 = "invisible",
        peg$c46 = peg$literalExpectation("invisible", true),
        peg$c47 = function() { return undefined},
        peg$c48 = "\"",
        peg$c49 = peg$literalExpectation("\"", false),
        peg$c50 = /^[^"]/,
        peg$c51 = peg$classExpectation(["\""], true, false),
        peg$c52 = function(v) { return {t: 'Literal', v}},
        peg$c53 = /^[0-9]/,
        peg$c54 = peg$classExpectation([["0", "9"]], false, false),
        peg$c55 = ".",
        peg$c56 = peg$literalExpectation(".", false),
        peg$c57 = function(n) { return {t: 'Literal', v: parseFloat(n)} },
        peg$c58 = "++",
        peg$c59 = peg$literalExpectation("++", false),
        peg$c60 = "ascendio",
        peg$c61 = peg$literalExpectation("ascendio", true),
        peg$c62 = function(v) { return {t: 'Rement', v: v, o: '++'} },
        peg$c63 = "--",
        peg$c64 = peg$literalExpectation("--", false),
        peg$c65 = "descendio",
        peg$c66 = peg$literalExpectation("descendio", true),
        peg$c67 = function(v) { return {t: 'Rement', v: v, o: '--'} },
        peg$c68 = "says",
        peg$c69 = peg$literalExpectation("says", false),
        peg$c70 = " ",
        peg$c71 = peg$literalExpectation(" ", false),
        peg$c72 = /^[^\n]/,
        peg$c73 = peg$classExpectation(["\n"], true, false),
        peg$c74 = function(v, t) { return {t: 'Set', v: v, e: {t: 'Literal', v: t}} },
        peg$c75 = function(n, d) {return {t: 'Literal', v: parseFloat(d?n+'.'+d:n)}},
        peg$c76 = function(d) {return d},
        peg$c77 = /^[',;:?!]/,
        peg$c78 = peg$classExpectation(["'", ",", ";", ":", "?", "!"], false, false),
        peg$c79 = function(l, r) { return l+r },
        peg$c80 = function(d) { return d },
        peg$c81 = function(t) {return (t.length%10).toString()},
        peg$c82 = function(l, o, r) { return {t: 'Arithmetic', l, o, r} },
        peg$c83 = "reducio",
        peg$c84 = peg$literalExpectation("reducio", true),
        peg$c85 = "-",
        peg$c86 = peg$literalExpectation("-", false),
        peg$c87 = function() {return '-'},
        peg$c88 = "engorgio",
        peg$c89 = peg$literalExpectation("engorgio", true),
        peg$c90 = "+",
        peg$c91 = peg$literalExpectation("+", false),
        peg$c92 = function() {return '+'},
        peg$c93 = "gemino",
        peg$c94 = peg$literalExpectation("gemino", true),
        peg$c95 = "*",
        peg$c96 = peg$literalExpectation("*", false),
        peg$c97 = function() {return '*'},
        peg$c98 = "sectumsepra",
        peg$c99 = peg$literalExpectation("sectumsepra", true),
        peg$c100 = "/",
        peg$c101 = peg$literalExpectation("/", false),
        peg$c102 = function() {return '/'},
        peg$c103 = function(l, b, c, r) { return {t: 'Comparison', l, r, b, c} },
        peg$c104 = "is",
        peg$c105 = peg$literalExpectation("is", true),
        peg$c106 = "not",
        peg$c107 = peg$literalExpectation("not", true),
        peg$c108 = "ain't",
        peg$c109 = peg$literalExpectation("ain't", true),
        peg$c110 = "!=",
        peg$c111 = peg$literalExpectation("!=", false),
        peg$c112 = function() { return false },
        peg$c113 = peg$literalExpectation("is", false),
        peg$c114 = function() { return true },
        peg$c115 = "ahead",
        peg$c116 = peg$literalExpectation("ahead", true),
        peg$c117 = "of",
        peg$c118 = peg$literalExpectation("of", true),
        peg$c119 = ">",
        peg$c120 = peg$literalExpectation(">", false),
        peg$c121 = function() { return 'gt' },
        peg$c122 = "behind",
        peg$c123 = peg$literalExpectation("behind", false),
        peg$c124 = "<",
        peg$c125 = peg$literalExpectation("<", false),
        peg$c126 = function() { return 'lt' },
        peg$c127 = "as",
        peg$c128 = peg$literalExpectation("as", true),
        peg$c129 = "high",
        peg$c130 = peg$literalExpectation("high", true),
        peg$c131 = "great",
        peg$c132 = peg$literalExpectation("great", true),
        peg$c133 = "big",
        peg$c134 = peg$literalExpectation("big", true),
        peg$c135 = "strong",
        peg$c136 = peg$literalExpectation("strong", true),
        peg$c137 = ">=",
        peg$c138 = peg$literalExpectation(">=", false),
        peg$c139 = function() {return 'ge'},
        peg$c140 = "low",
        peg$c141 = peg$literalExpectation("low", true),
        peg$c142 = "little",
        peg$c143 = peg$literalExpectation("little", true),
        peg$c144 = "small",
        peg$c145 = peg$literalExpectation("small", true),
        peg$c146 = "weak",
        peg$c147 = peg$literalExpectation("weak", true),
        peg$c148 = "<=",
        peg$c149 = peg$literalExpectation("<=", false),
        peg$c150 = function() {return 'le'},
        peg$c151 = "listen",
        peg$c152 = peg$literalExpectation("Listen", true),
        peg$c153 = "to",
        peg$c154 = peg$literalExpectation("to", true),
        peg$c155 = function(v) {return {t:'Listen', v}},
        peg$c156 = "spell",
        peg$c157 = peg$literalExpectation("Spell", true),
        peg$c158 = "print",
        peg$c159 = peg$literalExpectation("print", true),
        peg$c160 = function(e) {return {t:'Say', e}},
        peg$c161 = "if",
        peg$c162 = peg$literalExpectation("If", true),
        peg$c163 = function(e) { return {t: 'If', e} },
        peg$c164 = "else",
        peg$c165 = peg$literalExpectation("Else", true),
        peg$c166 = function() {return {t: 'Else'}},
        peg$c167 = "while",
        peg$c168 = peg$literalExpectation("While", true),
        peg$c169 = "until",
        peg$c170 = peg$literalExpectation("Until", true),
        peg$c171 = function(c, e) { return {t: 'Loop', c, e} },
        peg$c172 = "continue",
        peg$c173 = peg$literalExpectation("Continue", true),
        peg$c174 = function() {return {t: 'Continue'}},
        peg$c175 = "break",
        peg$c176 = peg$literalExpectation("Break", true),
        peg$c177 = "immobulous",
        peg$c178 = peg$literalExpectation("immobulous", true),
        peg$c179 = function() {return {t: 'Break'}},
        peg$c180 = "horcrux",
        peg$c181 = peg$literalExpectation("horcrux", true),
        peg$c182 = "def",
        peg$c183 = peg$literalExpectation("def", false),
        peg$c184 = "takes",
        peg$c185 = peg$literalExpectation("takes", true),
        peg$c186 = function(n, a) { return {t: 'FunctionDeclaration', n, a: a.map(a => a.n)} },
        peg$c187 = "and",
        peg$c188 = peg$literalExpectation("and", true),
        peg$c189 = function(a, b) { return [a].concat(b) },
        peg$c190 = function(a) { return [a] },
        peg$c191 = "give back",
        peg$c192 = peg$literalExpectation("Give back", true),
        peg$c193 = "return",
        peg$c194 = peg$literalExpectation("return", false),
        peg$c195 = function(e) { return {t: 'GiveBack', e} },
        peg$c196 = "",
        peg$c197 = function() {return {t: 'BlankLine'}},
        peg$c198 = "accio",
        peg$c199 = peg$literalExpectation("accio", false),
        peg$c200 = "(",
        peg$c201 = peg$literalExpectation("(", false),
        peg$c202 = ")",
        peg$c203 = peg$literalExpectation(")", false),
        peg$c204 = function(f, a) { return {t: 'FunctionCall', f, a} },
        peg$c205 = "or",
        peg$c206 = peg$literalExpectation("or", true),
        peg$c207 = function(l, b, r) { return {t: 'BooleanOperation', l, b, r} },
        peg$c208 = function(l) { return l },
        peg$c209 = "was",
        peg$c210 = peg$literalExpectation("was", true),
        peg$c211 = "were",
        peg$c212 = peg$literalExpectation("were", true),
        peg$c213 = "=",
        peg$c214 = peg$literalExpectation("=", false),
        peg$c215 = function(v, e) { return {t: 'Set', v: v, e} },
        peg$c216 = "points to",
        peg$c217 = peg$literalExpectation("points to", true),
        peg$c218 = function(e, v) {return{t: 'Set', v: v, e} },
        peg$c219 = function(e, v) { return {t: 'Set', v: v, e} },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseProgram() {
      var s0, s1;

      s0 = [];
      s1 = peg$parseStatement();
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parseStatement();
      }

      return s0;
    }

    function peg$parseStatement() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseFunctionDeclaration();
        if (s2 === peg$FAILED) {
          s2 = peg$parseOperation();
          if (s2 === peg$FAILED) {
            s2 = peg$parseBlankLine();
          }
        }
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 44) {
            s3 = peg$c0;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c1); }
          }
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parse_();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parse_();
            }
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 10) {
                s5 = peg$c2;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c3); }
              }
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c4(s2);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseOperation() {
      var s0;

      s0 = peg$parseLoop();
      if (s0 === peg$FAILED) {
        s0 = peg$parseIf();
        if (s0 === peg$FAILED) {
          s0 = peg$parseArithmeticStatement();
          if (s0 === peg$FAILED) {
            s0 = peg$parseGiveBack();
            if (s0 === peg$FAILED) {
              s0 = peg$parseSet();
              if (s0 === peg$FAILED) {
                s0 = peg$parsePut();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseListen();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseSay();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parseContinue();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parseBreak();
                        if (s0 === peg$FAILED) {
                          s0 = peg$parsePoeticString();
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parsewhitespace() {
      var s0;

      if (peg$c5.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }

      return s0;
    }

    function peg$parse_() {
      var s0, s1;

      s0 = [];
      s1 = peg$parsewhitespace();
      if (s1 === peg$FAILED) {
        s1 = peg$parsecomment();
      }
      if (s1 !== peg$FAILED) {
        while (s1 !== peg$FAILED) {
          s0.push(s1);
          s1 = peg$parsewhitespace();
          if (s1 === peg$FAILED) {
            s1 = peg$parsecomment();
          }
        }
      } else {
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsecomment() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 5).toLowerCase() === peg$c7) {
        s1 = input.substr(peg$currPos, 5);
        peg$currPos += 5;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parseall_char();
          if (s4 === peg$FAILED) {
            s4 = peg$parseall_symbol();
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parseall_char();
            if (s4 === peg$FAILED) {
              s4 = peg$parseall_symbol();
            }
          }
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseall_char() {
      var s0;

      if (peg$c9.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }

      return s0;
    }

    function peg$parseall_symbol() {
      var s0;

      if (peg$c11.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c12); }
      }

      return s0;
    }

    function peg$parseVariable() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseCommonVariable();
      if (s1 === peg$FAILED) {
        s1 = peg$parseProperVariable();
        if (s1 === peg$FAILED) {
          s1 = peg$parsesimple_variable();
        }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c13(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsesimple_variable() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      if (peg$c14.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c15); }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (peg$c14.test(input.charAt(peg$currPos))) {
            s2 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c15); }
          }
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        s0 = input.substring(s0, peg$currPos);
      } else {
        s0 = s1;
      }

      return s0;
    }

    function peg$parseCommonVariable() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3).toLowerCase() === peg$c16) {
        s1 = input.substr(peg$currPos, 3);
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c17); }
      }
      if (s1 === peg$FAILED) {
        if (input.substr(peg$currPos, 2).toLowerCase() === peg$c18) {
          s1 = input.substr(peg$currPos, 2);
          peg$currPos += 2;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c19); }
        }
        if (s1 === peg$FAILED) {
          if (input.substr(peg$currPos, 4).toLowerCase() === peg$c20) {
            s1 = input.substr(peg$currPos, 4);
            peg$currPos += 4;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c21); }
          }
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          s4 = [];
          if (peg$c22.test(input.charAt(peg$currPos))) {
            s5 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c23); }
          }
          if (s5 !== peg$FAILED) {
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              if (peg$c22.test(input.charAt(peg$currPos))) {
                s5 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c23); }
              }
            }
          } else {
            s4 = peg$FAILED;
          }
          if (s4 !== peg$FAILED) {
            s3 = input.substring(s3, peg$currPos);
          } else {
            s3 = s4;
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c24(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseProperWord() {
      var s0, s1, s2, s3;
